log
Fri Mar  6 02:09:45 PM UTC 2026: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
01fd9a2
Fri Mar  6 02:13:56 PM UTC 2026: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
04f1222
Fri Mar  6 02:25:27 PM UTC 2026: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:11: error: returning ‘int (*)(List *)’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   68 |    return sumaLista;
      |           ^~~~~~~~~
8e6519c
Fri Mar  6 02:28:09 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
b9c0348
Thu Mar 19 12:43:32 AM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
65a4ef9
Thu Mar 19 12:44:26 AM UTC 2026: 
 exercises.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
43d5e41
